static/general.styl
open-quote()
  content "“"
  left -0.2em
  position absolute
  top -0.2em
  z-index 1

  color text-light
  font-size 3em
  line-height 1

html
  height 100%
  margin 0
  overflow-x hidden
  padding 0

  background site-bg url("{{'img'|env}}/pattern-slant-rt.png") repeat left top

  color text-dark
  font normal 100%/1.5 "Open Sans",sans-serif

body
  margin 0
  min-height 100%
  overflow-x hidden
  padding 0

  font 300 100%/1.5 "Open Sans",sans-serif

p
  margin 0 0 1.5em
  padding 0

a
a:link
a:visited
.btn-link
  display inline
  margin 0
  padding 0

  background-color transparent
  border 0
  border-bottom 0.1em solid rgba(link-normal,0.2)
  transition all 150ms linear

  color link-normal
  font inherit
  text-decoration none

.btn-link
  border 0

  text-transform uppercase

a:hover
a:focus
a:active
.btn-link:hover
.btn-link:focus
.btn-link:active
  border-color link-bright

  color link-bright

h1
  margin 0 0 0.75em

  font-size 3em
  font-weight 600

h2
  margin 0 0 0.875em

  color text-medium-dark
  font-size 2.75em
  font-weight 600

h3
h4
h5
h6
  margin 0 0 1em

  color text-medium-medium
  font-size 2.5em
  font-weight 600

h4
  color text-medium
  font-size 2.25em

h5
  color text-medium
  font-size 2em

h6
  color text-medium
  font-size 1.5em

ul
.alt-list
  margin 0 0 1.5em
  padding 0

  list-style-type none

  & li
    position relative

  & li:before
  .alt-list li:before
    content "•"
    left -0.6em
    position absolute
    width 0.5em

    color text-medium
    font-size 1.5em
    line-height 1.1
    text-align right

  & ul
    margin-bottom 0
    padding-left 1em

strong
b
  font-weight 400

del
  color text-medium

hr
  clear both
  height 0
  margin 1.9em 0 1.8em
  padding 0

  border 0
  border-top 4px solid site-bg-dark

dl
  margin 0
  padding 0

dt
  margin 0
  padding 0

  font-size 1.125em
  font-weight 400

dd
  margin 0 0 1.5em
  padding 0

.btn-group
  margin-top 3em

  text-align center

.btn
.btn:link
.btn:visited
  display inline-block
  padding 0.5em 1em 0.7em
  position relative

  background-color button-muted-light
  border 0
  border-radius 4px
  transition all 150ms linear

  color #fff
  font-size 1.125em
  font-weight 400

.btn:hover,
.btn:focus,
.btn:active
  background-color link-normal

.btn:active
  top 1px

  box-shadow inset 0 0 5px rgba(0,0,0,0.4)

[title="and"]
  font-family: Baskerville,Palatino,"Book Antiqua",serif;
  font-style italic
  font-weight normal

